# dbshepherd

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go
api/: BUILD.bazel  README.md  migrate.proto
app/grpc/: BUILD.bazel  README.md  api_migrate.go
app/services/: BUILD.bazel  README.md  api_migrate.go  healthservice.go  injector.go  migration_environments.go  provider.go  services.go  sighandler.go  tracker.go  user_db.go  webserver.go
binary/: BUILD.bazel  README.md  main.go
binary/postgres_files/: BUILD.bazel  README.md
binary/sqlite_files/: BUILD.bazel  README.md
cmd/: BUILD.bazel  README.md  admin.go
common/: BUILD.bazel  README.md  common.go  migration_environments.go
dbsui/: BUILD.bazel  README.md  pubspec.yaml
dbsui/integration_test/: app_test.dart  driver.dart
dbsui/lib/: app.dart  main.dart  string_extensions.dart
dbsui/lib/blocs/database/: database.dart
dbsui/lib/blocs/database/bloc/: database_bloc.dart  database_event.dart  database_state.dart
dbsui/lib/blocs/environments/: environments.dart
dbsui/lib/blocs/environments/bloc/: environments_bloc.dart  environments_event.dart  environments_state.dart
dbsui/lib/blocs/migrations/: migrations.dart
dbsui/lib/blocs/migrations/bloc/: migrations_bloc.dart  migrations_event.dart  migrations_state.dart
dbsui/lib/home/: home.dart
dbsui/lib/home/bloc/: operation_bloc.dart  operation_event.dart  operation_state.dart
dbsui/lib/home/models/: data_version.dart  input_version.dart  models.dart  operation.dart
dbsui/lib/home/view/: home_page.dart  home_view.dart  view.dart
dbsui/lib/widgets/: confirmation_button.dart  database_card.dart  environments_dropdown.dart  lazy_source_view.dart  operation_button.dart  status_chip.dart  version_card.dart
dbsui/test/: widget_test.dart
dbsui/web/: index.html  manifest.json
docs/: README.md  configuration.md  faq.md  versioning.md
docs/developer/: README.md  architecture.md  build_process.md  releasing.md  ui_mockups.md
examples/: README.md
examples/manifests/: README.md  dbshepherd-deployment.yaml  dbshepherd-service.yaml
examples/schema/: 202101221100_initialize_schema.down.sql  202101221100_initialize_schema.up.sql  202101271024_add_table.down.sql  202101271024_add_table.up.sql  202102021430_insert_report.up.sql  202102021430_remove_report.down.sql  README.md
images/: README.md
modules/: BUILD.bazel  README.md  full.go  postgres_files.go  sqlite_files.go
release/: BUILD.bazel  README.md
release/darwin/: README.md
release/darwin/amd64/: BUILD.bazel  README.md
release/linux/: README.md
release/linux/amd64/: BUILD.bazel  README.md
