# Copyright 2021 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

alias(
    name = "dbshepherd",
    actual = "//binary:dbshepherd",
    visibility = ["//visibility:public"],
)

alias(
    name = "dbshepherd_postgres_files",
    actual = "//binary:dbshepherd_postgres_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "dbshepherd_sqlite_files",
    actual = "//binary:dbshepherd_sqlite_files",
    visibility = ["//visibility:public"],
)

alias(
    name = "dbshepherd_dev",
    actual = "//binary:dbshepherd_dev",
    visibility = ["//visibility:public"],
)

go_image(
    name = "dbshepherd_image",
    base = "@distroless_base-debian10//image",
    embed = [":dbshepherd"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "dbshepherd_postgres_files_image",
    embed = [":dbshepherd_postgres_files"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "dbshepherd_sqlite_files_image",
    base = "@distroless_base-debian10//image",
    embed = [":dbshepherd_sqlite_files"],
    pure = "off",
    visibility = ["//visibility:public"],
)
