# Copyright 2021 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/plezentek/dbshepherd/cmd
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["admin.go"],
    importpath = "github.com/plezentek/dbshepherd/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//app/services:go_default_library",
        "//common:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_automaxprocs//maxprocs:go_default_library",
    ],
)

go_library(
    name = "dev_library",
    srcs = ["admin.go"],
    importpath = "github.com/plezentek/dbshepherd/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//app/services:dev_library",
        "//common:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_automaxprocs//maxprocs:go_default_library",
    ],
)
