# Copyright 2021 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@com_plezentek_rules_wire//wire:def.bzl", "wire_injector")

# gazelle:prefix github.com/plezentek/dbshepherd/app/services
gazelle(name = "gazelle")

filegroup(
    name = "sources",
    srcs = glob(["*.go"]),
)

wire_injector(
    name = "injector",
    srcs = [
        ":sources",
    ],
    deps = [
        "//api:go_default_library",
        "//common:go_default_library",
        "//dbsui:static_files",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//:migrate",  # keep
        "@com_github_golang_migrate_migrate_v4//source",  # keep
        "@com_github_google_wire//:go_default_library",
        "@com_github_improbable_eng_grpc_web//go/grpcweb:go_default_library",
        "@com_github_rs_cors//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_unrolled_logger//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
        "@org_golang_x_net//http2/h2c:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    # keep
    srcs = [
        ":injector",
        ":sources",
    ],
    importpath = "github.com/plezentek/dbshepherd/app/services",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//common:go_default_library",
        "//dbsui:static_files",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//:migrate",  # keep
        "@com_github_golang_migrate_migrate_v4//source",  # keep
        "@com_github_google_wire//:go_default_library",
        "@com_github_improbable_eng_grpc_web//go/grpcweb:go_default_library",
        "@com_github_rs_cors//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_unrolled_logger//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
        "@org_golang_x_net//http2/h2c:go_default_library",
    ],
)
