# Copyright 2021 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_zip")

go_binary(
    name = "dbshepherd",
    embed = ["//:dbshepherd"],
    goarch = "amd64",
    goos = "linux",
    visibility = [":__subpackages__"],
)

pkg_tar(
    name = "amd64_tar_gz",
    srcs = [
        ":dbshepherd",
    ],
    extension = "tar.gz",
    package_base = "",
    package_dir = "/",
    package_file_name = "dbshepherd-VERSION-linux-amd64.tar.gz",
    visibility = [":__subpackages__"],
)

pkg_zip(
    name = "amd64_zip",
    srcs = [
        ":dbshepherd",
    ],
    visibility = [":__subpackages__"],
)

filegroup(
    name = "amd64",
    srcs = [
        ":amd64_tar_gz",
        ":amd64_zip",
    ],
    visibility = ["//release:__subpackages__"],
)
